--- a/src/app/components/admin/view-users/view-users.component.html
+++ b/src/app/components/admin/view-users/view-users.component.html
@@ -11,6 +11,18 @@
           class="list-group"
           *ngIf="usersResponse"
         >
+
+        <div class="mb-3">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Search by name"
+            [(ngModel)]="searchQuery"
+            (ngModelChange)="onSearchChange($event)"
+          />
+        </div>
+        
+
           <div
             (click)="openUserModal(viewContent, user)"
             class="list-group-item d-flex justify-content-between align-items-center list-group-item-action"
