--- a/src/app/components/pages/view-product/view-product.component.html
+++ b/src/app/components/pages/view-product/view-product.component.html
@@ -16,11 +16,11 @@
     <div class="card-body">
       <!-- Product Summary -->
       <div class="product-summary mb-4">
-        <p class="lead text-secondary">
+        <!-- <p class="lead text-secondary">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
           quisquam! Quam doloribus nostrum harum nobis repellendus minus repellat
           aut voluptates. Fugit pariatur consectetur.
-        </p>
+        </p> -->
       </div>
 
       <div class="row g-4">
@@ -179,8 +179,8 @@
                   <!-- Description Tab -->
                   <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
                     <div class="description-content">
-                      <p class="mb-4">The Oculus Quest 2 is a standalone VR headset that offers a wireless, immersive VR experience. It comes with a higher resolution display, a faster processor, and access to a wide range of VR games and applications. Enjoy an easy setup with no PC or console required.</p>
-                      
+                      <!-- <p class="mb-4">The Oculus Quest 2 is a standalone VR headset that offers a wireless, immersive VR experience. It comes with a higher resolution display, a faster processor, and access to a wide range of VR games and applications. Enjoy an easy setup with no PC or console required.</p>
+                       -->
                       <p [innerHTML]="product.description"></p>
                       
                       <div class="features mt-4">
